# semantic-pdf-diff

./: .gitignore  .spdfdiff.toml  AGENTS.md  Cargo.toml  README.md  action.yml
.agents/skills/spdfdiff-content-text/: SKILL.md
.agents/skills/spdfdiff-content-text/agents/: openai.yaml
.agents/skills/spdfdiff-content-text/references/: content-text-plan.md
.agents/skills/spdfdiff-orchestrator/: SKILL.md
.agents/skills/spdfdiff-orchestrator/agents/: openai.yaml
.agents/skills/spdfdiff-orchestrator/references/: orchestrator-plan.md
.agents/skills/spdfdiff-parser/: SKILL.md
.agents/skills/spdfdiff-parser/agents/: openai.yaml
.agents/skills/spdfdiff-parser/references/: parser-plan.md
.agents/skills/spdfdiff-quality-gate/: SKILL.md
.agents/skills/spdfdiff-quality-gate/agents/: openai.yaml
.agents/skills/spdfdiff-quality-gate/references/: quality-plan.md
.agents/skills/spdfdiff-report-cli/: SKILL.md
.agents/skills/spdfdiff-report-cli/agents/: openai.yaml
.agents/skills/spdfdiff-report-cli/references/: report-cli-plan.md
.agents/skills/spdfdiff-semantic-diff/: SKILL.md
.agents/skills/spdfdiff-semantic-diff/agents/: openai.yaml
.agents/skills/spdfdiff-semantic-diff/references/: semantic-diff-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.serena/: project.yml
crates/diff_core/: Cargo.toml  README.md
crates/diff_core/benches/: diff_benchmark.rs
crates/diff_core/src/: lib.rs
crates/diff_report/: Cargo.toml  README.md
crates/diff_report/src/: lib.rs
crates/pdf_content/: Cargo.toml  README.md
crates/pdf_content/src/: lib.rs
crates/pdf_core/: Cargo.toml  README.md
crates/pdf_core/src/: lib.rs
crates/pdf_semantic/: Cargo.toml  README.md
crates/pdf_semantic/src/: lib.rs
crates/pdf_text/: Cargo.toml  README.md
crates/pdf_text/src/: lib.rs
crates/spdfdiff_cli/: Cargo.toml  README.md
crates/spdfdiff_cli/src/: main.rs
crates/spdfdiff_cli/tests/: cli_integration.rs
crates/spdfdiff_cli/tests/golden/diff_pairs/: changed-page-count.json  deleted-paragraph.json  identical.json  inserted-paragraph.json  layout-only-movement.json  modified-paragraph.json  moved-paragraph.json
crates/spdfdiff_cli/tests/support/: mod.rs  pdf_fixture.rs
crates/spdfdiff_types/: Cargo.toml  README.md
crates/spdfdiff_types/src/: lib.rs
docs/: index.html  styles.css
fuzz/: Cargo.toml  README.md
fuzz/corpus/parse_content_stream/: malformed.ops  text.ops
fuzz/fuzz_targets/: parse_content_stream.rs  parse_object.rs  parse_pdf.rs
plan/: 00_README_PLAN.md  01_ARCHITECTURE.md  02_DATA_MODEL_AND_DIFF_IR.md  03_PARALLEL_WORKSTREAMS.md  04_MILESTONES_AND_TICKETS.md  05_TESTING_STRATEGY.md  06_AGENT_EXECUTION_GUIDE.md  07_ROADMAP.md  08_REFERENCE_NOTES.md  09_REVIEW_AND_RISK_REGISTER.md
samples/: compatibility_corpus_manifest.json  semantic_diff_detailed_test_cases.md  semantic_diff_detailed_test_cases_v3.md  semantic_diff_detailed_test_cases_v4.md  semantic_diff_detailed_test_cases_v5.md  semantic_diff_test_cases.md
schemas/: CHANGELOG.md  ai_review.schema.json  check_report.schema.json  diff_document.schema.json  visual_diff.schema.json
scripts/: set_workspace_version.py
