[workspace]
members = [
    "crates/spdfdiff_types",
    "crates/pdf_core",
    "crates/pdf_content",
    "crates/pdf_text",
    "crates/pdf_semantic",
    "crates/diff_core",
    "crates/diff_report",
    "crates/spdfdiff_cli",
]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/eraydin/semantic-pdf-diff"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
flate2 = "1"
unicode-normalization = "0.1"
smallvec = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }
insta = "1"
proptest = "1"
criterion = "0.7"

spdfdiff_types = { version = "0.1.10", path = "crates/spdfdiff_types" }
pdf_core = { version = "0.1.10", path = "crates/pdf_core" }
pdf_content = { version = "0.1.10", path = "crates/pdf_content" }
pdf_text = { version = "0.1.10", path = "crates/pdf_text" }
pdf_semantic = { version = "0.1.10", path = "crates/pdf_semantic" }
diff_core = { version = "0.1.10", path = "crates/diff_core" }
diff_report = { version = "0.1.10", path = "crates/diff_report" }

[workspace.lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = "warn"
