[package]
name = "diff_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Semantic document matching and diffing."

[dependencies]
pdf_semantic.workspace = true
spdfdiff_types.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
fuzzing = []

[[bench]]
name = "diff_benchmark"
harness = false

[lints]
workspace = true
