[package]
name = "diff_core"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Semantic PDF comparison engine for matching document blocks and reporting meaningful changes."
readme = "README.md"
keywords = ["pdf", "diff", "semantic", "comparison", "document"]
categories = ["text-processing"]

[dependencies]
pdf_semantic.workspace = true
spdfdiff_types.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
fuzzing = []

[[bench]]
name = "diff_benchmark"
harness = false

[lints]
workspace = true
