[package]
name = "diff_report"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "JSON and human-readable report generation."

[dependencies]
serde_json.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
