[package]
name = "diff_report"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stable JSON, Markdown, HTML, and AI-review reports for semantic PDF comparison."
readme = "README.md"
keywords = ["pdf", "diff", "semantic", "report", "comparison"]
categories = ["text-processing"]

[dependencies]
serde_json.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
