[package]
name = "pdf_content"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PDF content stream tokenizer and interpreter."

[dependencies]
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
