[package]
name = "pdf_content"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PDF content stream tokenizer and operator interpreter for semantic PDF diff tools."
readme = "README.md"
keywords = ["pdf", "parser", "content", "diff", "semantic"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
