[package]
name = "pdf_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Low-level PDF parsing primitives for semantic PDF diffing."

[dependencies]
flate2.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
