[package]
name = "pdf_semantic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Semantic document model construction from positioned text."

[dependencies]
pdf_text.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
