[package]
name = "pdf_semantic"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Semantic PDF layout model construction for document comparison and diffing."
readme = "README.md"
keywords = ["pdf", "layout", "semantic", "diff", "comparison"]
categories = ["text-processing"]

[dependencies]
pdf_text.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
