[package]
name = "pdf_text"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Positioned glyph and text-run extraction."

[dependencies]
pdf_content.workspace = true
spdfdiff_types.workspace = true

[lints]
workspace = true
