[package]
name = "pdf_text"
version = "0.1.13"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Positioned PDF text and glyph extraction for semantic diff and comparison pipelines."
readme = "README.md"
keywords = ["pdf", "text", "extract", "diff", "semantic"]
categories = ["text-processing"]

[dependencies]
pdf_core.workspace = true
pdf_content.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
