[package]
name = "spdfdiff_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for semantic PDF diffing."

[[bin]]
name = "spdfdiff"
path = "src/main.rs"

[dependencies]
clap.workspace = true
diff_report.workspace = true
spdfdiff_types.workspace = true

[lints]
workspace = true
