[package]
name = "spdfdiff_cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for semantic PDF diffing."

[[bin]]
name = "spdfdiff"
path = "src/main.rs"

[dependencies]
clap.workspace = true
diff_core.workspace = true
diff_report.workspace = true
pdf_content.workspace = true
pdf_core.workspace = true
pdf_semantic.workspace = true
pdf_text.workspace = true
serde.workspace = true
serde_json.workspace = true
spdfdiff_types.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
