[package]
name = "spdfdiff_cli"
version = "0.1.12"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line semantic PDF diff and comparison tool with JSON, Markdown, and HTML output."
readme = "README.md"
keywords = ["pdf", "diff", "semantic", "comparison", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "spdfdiff"
path = "src/main.rs"

[dependencies]
clap.workspace = true
diff_core.workspace = true
diff_report.workspace = true
pdf_content.workspace = true
pdf_core.workspace = true
pdf_semantic.workspace = true
pdf_text.workspace = true
serde.workspace = true
serde_json.workspace = true
spdfdiff_types.workspace = true
toml.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
