[package]
name = "spdfdiff_types"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared semantic PDF diff types, diagnostics, provenance, and limits."

[dependencies]
serde.workspace = true
thiserror.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
