[package]
name = "spdfdiff_types"
version = "0.1.10"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared data model, diagnostics, provenance, and limits for semantic PDF diff tools."
readme = "README.md"
keywords = ["pdf", "diff", "semantic", "types", "comparison"]
categories = ["text-processing"]

[dependencies]
serde.workspace = true
thiserror.workspace = true

[features]
fuzzing = []

[lints]
workspace = true
